syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_outer_classname = "EventServiceClass";
option java_package = "com.grupo_c.SistemasDistribuidosTP.service";

message Empty2{}

//import user.proto
message UserDto{}

message EventDto{
    string name = 1;
    string description = 2;
    google.protobuf.Timestamp date = 3;
    //el evento inicialmente cuenta con el usuario creador
    repeated UserDto participants = 4;
}

message EventWithParticipantsDto{
    int64 id = 1;
    string name = 2;
    string description = 3;
    google.protobuf.Timestamp date = 4;
    repeated UserDto participants = 5;
}

message EventWithoutParticipantsDto{
    int64 id = 1;
    string name = 2;
    string description = 3;
    google.protobuf.Timestamp date = 4;
}

message Response2{
    bool succeeded = 1;
}

message EventAssignOrDeleteRequest {
    int64 event_id = 1;
    int64 user_id = 2;
}

message EventRequest{
    int64 id = 1;
}

message EventsWithParticipantsList{
    repeated EventWithParticipantsDto events = 1;
}

message EventsWithoutParticipantsList{
    repeated EventWithoutParticipantsDto events = 1;
}

service EventService{
    rpc CreateEvent (EventDto) returns (Response2);
    rpc ModifyEvent (EventWithParticipantsDto) returns (Response2);
    rpc DeleteEvent (EventRequest) returns (Response2);
    rpc AssignUserToEvent (EventAssignOrDeleteRequest) returns (Response2);
    rpc DeleteUserFromEvent (EventAssignOrDeleteRequest) returns (Response2);
    rpc GetEvent (EventRequest) returns (EventWithParticipantsDto);
    rpc GetEventsWithParticipantsList (Empty2) returns(EventsWithParticipantsList);
    rpc GetEventsWithoutParticipantsList (Empty2) returns(EventsWithoutParticipantsList);

}